--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -27,7 +27,7 @@
         </android.support.percent.PercentRelativeLayout>
 
         <TextView
-            android:id="@+id/actvity_main_title"
+            android:id="@+id/item_name_title"
             style="@style/Base.TextAppearance.AppCompat.Title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -38,7 +38,7 @@
             tools:text="My Title" />
 
         <TextView
-            android:id="@+id/item_name_time"
+            android:id="@+id/item_name_date"
             style="@style/Base.TextAppearance.AppCompat.Body1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
