--- a/app/src/main/res/layout/item_sources.xml
+++ b/app/src/main/res/layout/item_sources.xml
@@ -1,25 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ImageView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/item_sources_ll"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
-
-    <ImageView
-        android:id="@+id/item_sources_image"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:scaleType="centerCrop"
-        tools:src="@drawable/sample" />
-
-    <TextView
-        android:id="@+id/item_sources_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="16dp"
-        android:textSize="20sp"
-        tools:text="BBC News" />
-
-</LinearLayout>
+    android:id="@+id/item_sources_image"
+    android:layout_width="100dp"
+    android:layout_height="100dp"
+    tools:src="@drawable/sample" />
